# TD_POOC

TD1/: CMakeLists.txt  main.cpp  test.cpp
TD1/mylib_dir/: CMakeLists.txt  exec  myclass.cpp  myclass.h
TD2/: AlienMock.h  CMakeCache.txt  CMakeLists.txt  HypreExample.cpp  HypreExemple.h  Makefile  PETScExemple.cpp  PETScExemple.h  cmake_install.cmake  main.cpp
